--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,42 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+  padding-top: 70px;
   padding-bottom: 20px;
+}
+
+.navbar {
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
+}
+
+.navbar .container {
+  margin-top: 10px;
+}
+
+.col-md-4 h2 {
+  background-color: rgb(109, 160, 250);
+  color: rgb(224, 245, 255);
+  padding: 7px;
+  margin-top: 0;
+  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.5);
+}
+
+.contact {
+  background-color: #555;
+  color: #AAA;
+  font-size: 16px;
+  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.5);
+}
+
+.contact h2 {
+  color: #EEE;
+  background: none;
+  padding-left: 0;
+  padding-right: 0;
+  box-shadow: none;
+}
+
+.contact .field,
+.contact a, .contact a:hover, .contact a:visited, .contact a:active {
+  color:#EEE;
+  font-weight: bold;
 }
