Created dreamweaver template and added services page

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
 .col-md-4 h2, .col-md-8 h2 {
   background-color: rgb(109, 160, 250);
   color: rgb(224, 245, 255);
-  padding: 7px;
+  padding: 7px 14px;
   margin-top: 0;
   box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.5);
 }
