--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -449,6 +449,13 @@ h2,
 .h2 {
   font-size: 30px;
 }
+@media (max-width: 1199px)
+{
+  h2,
+  .h2 {
+    font-size: 28px;
+  }
+}
 h3,
 .h3 {
   font-size: 24px;
