--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
   width:100%;
 }
 
-.col-md-4 h2, .col-md-8 h2 {
+.col-md-4 h2, .col-md-8 h2, .col-md-12 h2 {
   background-color: rgb(109, 160, 250);
   color: rgb(240, 250, 255);
   padding: 7px 14px;
@@ -38,32 +38,37 @@ body {
   color: #eee;
 }
 
-.contact {
+.solid {
   background-color: #555;
   color: #bbb;
   font-size: 16px;
-  padding: 1px 15px;
+  padding: 15px;
   margin-bottom: 15px;
 }
 
-.contact h2 {
+.solid h2 {
   color: #EEE;
   background: none;
+  padding-top: 0;
   padding-left: 0;
   padding-right: 0;
   box-shadow: none;
   border-bottom: 1px solid #eee;
 }
 
-.contact .field,
-.contact a, .contact a:hover, .contact a:visited, .contact a:active {
+.solid .field,
+.solid a, .solid a:hover, .solid a:visited, .solid a:active {
   color:#EEE;
   font-weight: bold;
 }
 @media (min-width: 992px) and (max-width: 1199px) {
-  .contact .field {
+  .solid .field {
     font-size: 13px;
   }
+}
+
+.solid p:last-child {
+  margin-bottom: 0px;
 }
 
 .subtitle {
@@ -74,4 +79,10 @@ body {
   left: 60px;
   top: 30px;
   font-family: "Times New Roman", Times, serif;
+}
+
+.testimonial {
+  font-style:italic;
+}
+.testimonial-name {
 }
