--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -31,6 +31,17 @@ body {
   color: rgb(240, 250, 255);
   padding: 7px 14px;
   margin-top: 0;
+  text-align: center;
+}
+
+.col-md-4 h3, .col-md-8 h3, .col-md-12 h3 {
+  margin-top: 40px;
+  margin-bottom: 0;
+}
+
+.col-md-4 p, .col-md-8 p, .col-md-12 p {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .alt-col h2 {
